--- a/workq-tracker/package.json
+++ b/workq-tracker/package.json
@@ -2,6 +2,7 @@
   "name": "workq-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/workq",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -19,6 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
