--- a/workq-tracker/package.json
+++ b/workq-tracker/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/workq",
   "dependencies": {
+    "@supabase/supabase-js": "^2.51.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -20,7 +21,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
